# AsakuraWikiNotices

./: .gitignore  next-env.d.ts  next.config.js  package.json  tsconfig.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  main.rs  models.rs
src/components/notice/: Notice.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
