[package]
name = "asakurawikinotices"
version = "1.0.1"
description = "AsakuraWikiNotices"
authors = ["sakitibi"]
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.6", features = [ "shell-all", "custom-protocol" ] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"